--- a/Bootstrap/precios.html
+++ b/Bootstrap/precios.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,22 +11,24 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title> Stones! </title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="#"> Stones! </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#"> Stones! </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html"> Home </a> </li>
                 <li class="nav-item"><a class="nav-link" href="nosotros.html"> Nosotros </a></li>
                 <li class="nav-item  active"><a class="nav-link" href="#"> Precios </a></li>
                 <li class="nav-item"><a class="nav-link" href="contacto.html"> Contacto </a></li>
-              </ul>
-          </div>
-      </nav>
+            </ul>
+        </div>
+    </nav>
     <div class="jumbotron">
         <h1>Stones Logo </h1>
     </div>
@@ -38,15 +41,15 @@
         </nav>
         <ul class="nav nav-pills" id="myTab" role="tablist">
             <li class="nav-item">
-                <a class="nav-link active" id="compara-tab" data-toggle="pill" href="#compara" role="tab" aria-controls="compara"
-                aria-selected="true">Compara</a>
+                <a class="nav-link active" id="compara-tab" data-toggle="pill" href="#compara" role="tab"
+                    aria-controls="compara" aria-selected="true">Compara</a>
             </li>
             <li>
-                <a class="nav-link" id="tarjetas-tab" data-toggle="pill" href="#tarjetas" role="tab" aria-controls="tarjetas"
-                aria-selected="false">Tarjetas</a>
+                <a class="nav-link" id="tarjetas-tab" data-toggle="pill" href="#tarjetas" role="tab"
+                    aria-controls="tarjetas" aria-selected="false">Tarjetas</a>
             </li>
-            <li><a class="nav-link" id="comentarios-tab" data-toggle="pill" href="#comentarios" role="tab" aria-controls="comentarios"
-                aria-selected="false">Comentarios</a>
+            <li><a class="nav-link" id="comentarios-tab" data-toggle="pill" href="#comentarios" role="tab"
+                    aria-controls="comentarios" aria-selected="false">Comentarios</a>
             </li>
         </ul>
         <div class="tab-content" id="myTabContent" style="padding-top: 10px;">
@@ -92,19 +95,21 @@
                             </tr>
                         </tbody>
                     </table>
-                    </div>
+                </div>
             </div>
             <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
                 <div class="accordion" id="accordionTarjetas">
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h5 class="mb-0">
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseBasica" aria-expanded="true" aria-controls="collapseBasica">
+                                <button class="btn btn-link" type="button" data-toggle="collapse"
+                                    data-target="#collapseBasica" aria-expanded="true" aria-controls="collapseBasica">
                                     Tarjeta Basica
                                 </button>
                             </h5>
                         </div>
-                        <div id="collapseBasica" class="collapse" aria-labelledby="headingOne" data-parent="#accordionTarjetas">
+                        <div id="collapseBasica" class="collapse" aria-labelledby="headingOne"
+                            data-parent="#accordionTarjetas">
                             <div class="card-body">
                                 Lorem ipsum dolor sit amet.
                             </div>
@@ -114,12 +119,15 @@
                         <div class="card">
                             <div class="card-header" id="headingTwo">
                                 <h3 class="mb-0">
-                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSilver" aria-expanded="true" aria-controls="collapseBasica">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        data-target="#collapseSilver" aria-expanded="true"
+                                        aria-controls="collapseBasica">
                                         Tarjeta Silver
                                     </button>
                                 </h3>
                             </div>
-                            <div id="collapseSilver" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionTarjetas">
+                            <div id="collapseSilver" class="collapse show" aria-labelledby="headingTwo"
+                                data-parent="#accordionTarjetas">
                                 <div class="card-body">
                                     Lorem ipsum dolor sit amet.
                                 </div>
@@ -129,12 +137,15 @@
                             <div class="card">
                                 <div class="card-header" id="headingThree">
                                     <h5 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsePlatinum" aria-expanded="true" aria-controls="collapseBasica">
+                                        <button class="btn btn-link" type="button" data-toggle="collapse"
+                                            data-target="#collapsePlatinum" aria-expanded="true"
+                                            aria-controls="collapseBasica">
                                             Tarjeta Platinum
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="collapsePlatinum" class="collapse" aria-labelledby="headingThree" data-parent="#accordionTarjetas">
+                                <div id="collapsePlatinum" class="collapse" aria-labelledby="headingThree"
+                                    data-parent="#accordionTarjetas">
                                     <div class="card-body">
                                         Lorem ipsum dolor sit amet.
                                     </div>
@@ -142,38 +153,40 @@
                             </div>
 
 
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+                        Comentarios</div>
                 </div>
-            </div>
-            <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">Comentarios</div>
-        </div>
-        
-        
-    </div>
-
-    <footer>
-        <div  class="row align-items-center">
-            <div class="col-sm-4 d-flex flex-column justify-self-center">
-                <a href="#">Twitter</a>
-                <a href="#">Facebook</a>
-            </div>
-            <div class="col-sm-4 d-flex flex-column">
-                <address>
-                    <p> Lorem ipsum dolor sit.</p>
-                    <p> Lorem ipsum dolor sit.</p>
-                    <p> Lorem ipsum dolor sit.</p>
-                </address>
-            </div>
-            <div class="col-sm-4 d-flex flex-column">
-                <h2> Stones! </h2>
-            </div>
-        </div>
-    </footer>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+            </div>
+
+            <footer>
+                <div class="row align-items-center">
+                    <div class="col-sm-4 d-flex flex-column justify-self-center">
+                        <a href="#">Twitter</a>
+                        <a href="#">Facebook</a>
+                    </div>
+                    <div class="col-sm-4 d-flex flex-column">
+                        <address>
+                            <p> Lorem ipsum dolor sit.</p>
+                            <p> Lorem ipsum dolor sit.</p>
+                            <p> Lorem ipsum dolor sit.</p>
+                        </address>
+                    </div>
+                    <div class="col-sm-4 d-flex flex-column">
+                        <h2> Stones! </h2>
+                    </div>
+                </div>
+            </footer>
+
+
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="node_modules/jquery/dist/jquery.min.js"></script>
+            <script src="node_modules/popper.js/dist/popper.min.js"></script>
+            <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+
 </html>
