--- a/Bootstrap/nosotros.html
+++ b/Bootstrap/nosotros.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,23 +9,26 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
     <title> Stones! </title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="#"> Stones! </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#"> Stones! </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html"> Home </a> </li>
                 <li class="nav-item active"><a class="nav-link" href="#"> Nosotros </a></li>
                 <li class="nav-item"><a class="nav-link" href="precios.html"> Precios </a></li>
                 <li class="nav-item"><a class="nav-link" href="contacto.html"> Contacto </a></li>
-              </ul>
-          </div>
-      </nav>
+            </ul>
+        </div>
+    </nav>
     <div class="jumbotron">
         <h1>Stones Logo </h1>
     </div>
@@ -40,7 +44,7 @@
     </div>
 
     <footer>
-        <div  class="row align-items-center">
+        <div class="row align-items-center">
             <div class="col-sm-4 d-flex flex-column justify-self-center">
                 <a href="#">Twitter</a>
                 <a href="#">Facebook</a>
@@ -64,5 +68,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
