--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron d-flex flex-column">
         <p> Stone Store </p>
     </div>
 
@@ -54,8 +54,8 @@
                     aria-expanded="false" aria-controls="multiCollapse3">Experiencia</button>
             </div>
         </div>
-        <div class="row  mensajes">
-            <div class="col-sm-4 collapse multi-collapse" id="servicio">
+        <div class="row mensajes">
+            <div class="col-sm-4 collapse multi-collapse ml-5">
                 <p>
                 <h3>Servicio</h3>
                 <p>Lorem ipsum dolor sit amet</p>
@@ -74,7 +74,7 @@
                 </p>
             </div>
         </div>
-        <div class="carousel slide" id="carouselControls" data-ride="carousel">
+        <div class="carousel slide mb-4" id="carouselControls" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/banner.jpg" alt="#1">
@@ -160,7 +160,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Check</button>
+                        title="Hola, Consulta la promociones"> Deja tus datos </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -174,7 +174,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Check</button>
+                        title="Hola, Consulta la promociones"> Deja tus datos </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -188,7 +188,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Check</button>
+                        title="Hola, Consulta la promociones"> Deja tus datos </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -202,7 +202,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Check</button>
+                        title="Hola, Consulta la promociones"> Deja tus datos </button>
                 </div>
             </div>
         </div>
@@ -237,7 +237,7 @@
         </div>
     </div>
     <footer>
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-items-center textt">
             <div class="col-sm-4 d-flex flex-column justify-self-center">
                 <a href="#">Twitter</a>
                 <a href="#">Facebook</a>
@@ -251,6 +251,7 @@
             </div>
             <div class="col-sm-4 d-flex flex-column">
                 <h2> Stones! </h2>
+                <h5> Tu tienda de confianza </h3>
             </div>
         </div>
     </footer>
