--- a/Bootstrap/contacto.html
+++ b/Bootstrap/contacto.html
@@ -1,31 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
+    <!-- build:css dist/contacto.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+    <!-- endbuild -->
     <title> Stones! </title>
-  </head>
-  <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="#"> Stones! </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#"> Stones! </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html"> Home </a> </li>
                 <li class="nav-item"><a class="nav-link" href="nosotros.html"> Nosotros </a></li>
                 <li class="nav-item"><a class="nav-link" href="precios.html"> Precios </a></li>
                 <li class="nav-item active"><a class="nav-link" href="#"> Contacto </a></li>
-              </ul>
-          </div>
-      </nav>
+            </ul>
+        </div>
+    </nav>
     <div class="jumbotron">
         <h1>Stones Logo </h1>
     </div>
@@ -78,9 +79,8 @@
             <button type="submit" class="btn btn-dark col-sm-3"> Enviar </button>
         </form>
     </div>
-
     <footer>
-        <div  class="row align-items-center">
+        <div class="row align-items-center">
             <div class="col-sm-4 d-flex flex-column">
                 <a href="#">Twitter</a>
                 <a href="#">Facebook</a>
@@ -97,12 +97,13 @@
             </div>
         </div>
     </footer>
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- build:js dist/contacto.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+    <!-- endbuild -->
+</body>
+
 </html>
