--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- build:css dist/index.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+    <!-- endbuild -->
     <title> Stones! </title>
 </head>
 
@@ -107,7 +108,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto"><span
-                            class="oi oi-thumb-up"></span> Check </button></div>
+                            class="oi oi-thumb-up"></span> Deja tus datos </button></div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
                 <div class="card-body">
@@ -121,7 +122,7 @@
                 </div>
                 <div><button type="button" class="btn btn-dark data-toggle=" modal"
                         data-target="#contacto"" data-toggle=" modal" data-target="#contacto"><span
-                            class="oi oi-thumb-up"></span> Check </button></div>
+                            class="oi oi-thumb-up"></span> Deja tus datos </button></div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
                 <div class="card-body">
@@ -134,7 +135,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto"><span
-                            class="oi oi-thumb-up"></span> Check </button></div>
+                            class="oi oi-thumb-up"></span> Deja tus datos </button></div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
                 <div class="card-body">
@@ -146,8 +147,8 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing.
                     </p>
                 </div>
-                <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto"><span
-                            class="oi oi-thumb-up"></span> Check </button></div>
+                <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto" id="contactoBtn"><span
+                            class="oi oi-thumb-up"></span> Deja tus datos </button></div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
                 <div class="card-body">
@@ -160,7 +161,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Deja tus datos </button>
+                        title="Hola, Consulta la promociones"> Check </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -174,7 +175,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Deja tus datos </button>
+                        title="Hola, Consulta la promociones"> Check </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -188,7 +189,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Deja tus datos </button>
+                        title="Hola, Consulta la promociones"> Check </button>
                 </div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
@@ -202,7 +203,7 @@
                     </p>
                 </div>
                 <div><button type="button" class="btn btn-outline-dark btn-reserva" data-toggle="popover"
-                        title="Hola, Consulta la promociones"> Deja tus datos </button>
+                        title="Hola, Consulta la promociones" id="contactoBTN"> Check </button>
                 </div>
             </div>
         </div>
@@ -259,18 +260,12 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- build:js dist/index.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(function () {
-            $("[data-toggle='tooltip']").tooltip();
-            $("[data-toggle='popover']").popover();
-            $('.carousel').carousel({
-                interval: 2000
-            });
-        });
-    </script>
+    <script src="js/index.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
