--- a/Bootstrap/precios.html
+++ b/Bootstrap/precios.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- build:css dist/precios.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+    <!-- endbuild -->
     <title> Stones! </title>
 </head>
 
@@ -151,17 +152,12 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                     <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
                         Comentarios</div>
                 </div>
-
-
             </div>
-
             <footer>
                 <div class="row align-items-center">
                     <div class="col-sm-4 d-flex flex-column justify-self-center">
@@ -180,13 +176,13 @@
                     </div>
                 </div>
             </footer>
-
-
             <!-- Optional JavaScript -->
             <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <!-- build:js dist/precios.js -->
             <script src="node_modules/jquery/dist/jquery.min.js"></script>
             <script src="node_modules/popper.js/dist/popper.min.js"></script>
             <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
+            <!-- endbuild -->
+        </body>
 
 </html>
