--- a/web4everybody/index.html
+++ b/web4everybody/index.html
@@ -6,40 +6,40 @@
 </head>
 	<body>
 		<header>
-			<h1><mark>Daniel Lorenzo S</mark></h1>
+			<h1>Daniel Lorenzo S</h1>
 			<nav>
 				<a href="#">One</a>
 				<a href="#">Two</a>
 				<a href="#">Three</a>
-				<a href="#"><mark>End</mark></a>	
+				<a href="#">End</a>	
 			</nav>
 		</header>
 		<section>
 			<h2>Favorite Foods</h2>
 			<ul>
-				<li><mark>Pizza</mark></li>
-				<li><mark>Sandwich</mark></li>
-				<li><mark>Sushi</mark></li>
-				<li><mark>BBQ</mark></li>
+				<li>Pizza</li>
+				<li>Sandwich</li>
+				<li>Sushi</li>
+				<li>BBQ</li>
 			</ul>
 		</section>
 		<section>
 			<h2>Achievements</h2>
 			Progress in this course(100%)<progress value="100" max="100"></progress><br>
 			Progress in the Specialization capstone(20%)<progress value="20" max="100"></progress><br>
-			Progress in life goals<mark>(76%)</mark><progress value="76" max="100"></progress><br>
+			Progress in life goals(76%)<progress value="76" max="100"></progress><br>
 		</section>
 
 		<section>
 			<h2>More About Me</h2>
 			<details>
 				<summary>Fonx</summary>
-				<p><mark>Fonx is the name of my cat</mark></p>
+				<p><em>Fonx is the name of my cat</em></p>
 			</details>
 		</section>
 		<footer>
 			<img src="http://www.intro-webdesign.com/images/newlogo.png" alt="logo">
-			This page was created by <mark> Daniel Lorenzo</mark> &amp; Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>.
+			This page was created by  Daniel Lorenzo &amp; Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>.
 		</footer>
 	</body>
 </html>
