--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -5,7 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- build:css dist/index.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -147,8 +146,8 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing.
                     </p>
                 </div>
-                <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto" id="contactoBtn"><span
-                            class="oi oi-thumb-up"></span> Deja tus datos </button></div>
+                <div><button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contacto"
+                        id="contactoBtn"><span class="oi oi-thumb-up"></span> Deja tus datos </button></div>
             </div>
             <div class="card card-stone d-flex flex-column justify-content-between ml-2 mb-2">
                 <div class="card-body">
