--- a/Bootstrap_2/aboutus.html
+++ b/Bootstrap_2/aboutus.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#">Ristorante Fonzi</a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
@@ -40,7 +40,8 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="image-fluid">
                 </div>
             </div>
         </div>
@@ -70,12 +71,37 @@
                     our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
             <div>
+                <div class="col-sm">
+                    <div class="card">
+                        <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                        <div class="card-body">
+                            <dl class="row">
+                                <dt class="col-5">Started</dt>
+                                <dd class="col-5">1 Jun. 2020</dd>
+                                <dt class="col-5">Ended</dt>
+                                <dd class="col-5">...</dd>
+                                <dt class="col-5">Hello</dt>
+                                <dd class="col-5">World!</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote ">
+                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                        <footer class="blockquote-footer">Fonzi Lord,
+                            <cite title="Source Tittle">A journey with Fonzi, Fonzi, 2020</cite>
+                        </footer>
+                    </blockquote>
+                </div>
             </div>
         </div>
 
 
-        <div class="row row-sm-6 row-content">
-            <div class="col-12 col-sm-6">
+        <div class="row row-content">
+            <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous
@@ -101,7 +127,46 @@
                         winning hit! Amma Mia!</em></p>
             </div>
         </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm-9">
+                <h2>Facts &amp; Figures</h2>
+                <div class="table-responsive">
+                    <table class="table table-stripped">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>2017</th>
+                                <th>2018</th>
+                                <th>2019</th>
+                                <th>2020</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>Employees</th>
+                                <td>10</td>
+                                <td>30</td>
+                                <td>50</td>
+                            </tr>
+                            <tr>
+                                <th>Guests Served</th>
+                                <td>1500</td>
+                                <td>5000</td>
+                                <td>10.000</td>
+                            </tr>
+                            <tr>
+                                <th>Especial Events</th>
+                                <td>5</td>
+                                <td>10</td>
+                                <td>20</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3">
 
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
