--- a/Bootstrap_2/index.html
+++ b/Bootstrap_2/index.html
@@ -39,12 +39,12 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion!!</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
-                        lipsmacking creations will tickle your culinary senses!</p>
+                    <h1>Ristorante con Fusion</h1>
+                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="image-fluid">
+                <div class="col col-sm align-self-center" style="text-align: center;">
+                    <img src="img/logo.png" class="img-fluid">
+                    <a class="btn btn-warning" href="#reservationForm" role="button">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,8 @@
                 <div class="media">
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="pizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span><span
+                                class="badge badge-pill badge-secondary">$4.0</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
                             pizza, topped with Cerignola olives,
                             ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -73,7 +74,7 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
+                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                 <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different
                     salads, six enticing appetizers,
                     six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
@@ -101,7 +102,63 @@
             </div>
         </div>
     </div>
-
+    <div id="reservationForm" class="row row-content align-items-center" >
+        <div class="col-12 offset-0 col-md-8 offset-md-2">
+            <div class="card">
+                <h3 class="card-header bg-warning text-white">Reserve a table</h3>
+                <div class="card-block">
+                    <form>
+                        <div class="form-group row">
+                            <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-secondary active">
+                                        <input type="radio" name="nbPeople" value="1" autocomplete="off" checked> 1
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="2" autocomplete="off"> 2
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="3" autocomplete="off"> 3
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="4" autocomplete="off"> 4
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="5" autocomplete="off"> 5
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" name="nbPeople" value="6" autocomplete="off"> 6
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="lastname" class="col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span>
+                                    <input class="form-control" type="date" name="dateBooking" value="" placeholder="Date">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-clock-o" aria-hidden="true"></i></span>
+                                    <input class="form-control" type="hour" name="hourBooking" value="" placeholder="Time">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     <footer class="footer">
         <div class="container">
             <div class="row">
