--- a/Bootstrap_2/index.html
+++ b/Bootstrap_2/index.html
@@ -103,10 +103,10 @@
         </div>
     </div>
     <div id="reservationForm" class="row row-content align-items-center" >
-        <div class="col-12 offset-0 col-md-8 offset-md-2">
+        <div class="col-12 offset-4 col-xl-4">
             <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a table</h3>
-                <div class="card-block">
+                <div class="card-block mt-2 ml-5">
                     <form>
                         <div class="form-group row">
                             <label for="firstname" class="col-md-2 col-form-label">Number of Guests</label>
