--- a/Bootstrap_2/index.html
+++ b/Bootstrap_2/index.html
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div id="reservationForm" class="row row-content align-items-center" >
-        <div class="col-12 offset-4 col-xl-4">
+        <div class="col-12 offset-2 col-md-8">
             <div class="card">
                 <h3 class="card-header bg-warning text-white">Reserve a table</h3>
                 <div class="card-block mt-2 ml-5">
