Adding content to flexbox dir

--- a/web4everybody/teams.html
+++ b/web4everybody/teams.html
@@ -37,52 +37,52 @@
                     <th>League Type</th>
                 </tr>
                 <tr>
-                    <td>Afterburn - Air Force</td>
+                    <td class="text-left">Afterburn - Air Force</td>
                     <td class="tdc">Colorado</td>
                     <td class="tdc">Men's</td>
                 </tr>
                 <tr>
-                    <td>Cold Front (Bates College)</td>
+                    <td class="text-left">Cold Front (Bates College)</td>
                     <td>Maine</td>
                     <td>Women's</td>
                 </tr>
                 <tr>
-                    <td>Disco Inferno (Brown University)</td>
+                    <td class="text-left">Disco Inferno (Brown University)</td>
                     <td>Rhode Island</td>
                     <td>Women's</td>
                 </tr>
                 <tr>
-                    <td>Bad Habit (Catholic University)</td>
+                    <td class="text-left">Bad Habit (Catholic University)</td>
                     <td>Washington DC</td>
                     <td>Men's</td>
                 </tr>
                 <tr>
-                    <td>Jive Turkeys (Dickinson College)</td>
+                    <td class="text-left">Jive Turkeys (Dickinson College)</td>
                     <td>Pennsylvania</td>
                     <td>Both</td>
                 </tr>
                 <tr>
-                    <td>Knights of the Round Disc(Longwood College)</td>
+                    <td class="text-left">Knights of the Round Disc(Longwood College)</td>
                     <td>Virginia</td>
                     <td>Men's</td>
                 </tr>
                 <tr>
-                    <td>Ninjas (University of Minnesota)</td>
+                    <td class="text-left">Ninjas (University of Minnesota)</td>
                     <td>Minnesota</td>
                     <td>Women's</td>
                 </tr>
                 <tr>
-                    <td>Flying Squirrels (Hendrix College)</td>
+                    <td class="text-left">Flying Squirrels (Hendrix College)</td>
                     <td>Arizona</td>
                     <td>Men's</td>
                 </tr>
                 <tr>
-                    <td>Superfly (Yale)</td>
+                    <td class="text-left">Superfly (Yale)</td>
                     <td>Connecticut</td>
                     <td>Men's</td>
                 </tr>
                 <tr>
-                    <td>Flywheel (University of Michigan</td>
+                    <td class="text-left">Flywheel (University of Michigan</td>
                     <td>Michigan</td>
                     <td>Women's</td>
                 </tr>
